--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,39 @@
 ol{height:200px; width:18%;}
 ol{overflow:hidden; overflow-y:scroll;}
+.grid { margin:1em auto; border-collapse:collapse }
+.grid td {
+    cursor:pointer;
+    width:50px; height:50px;
+    border:1px solid #ccc;
+    text-align:center;
+    font-family:sans-serif; font-size:13px
+}
+.grid td.clicked {
+    background-color:yellow;
+    font-weight:bold; color:red;
+}
+
+.grid td.NAN {
+    background-color:black;
+    font-weight:bold; color:red;
+}
+
+.grid td.NAN {
+    background-color:black;
+    font-weight:bold; color:red;
+}
+
+.grid td.CONTAINER {
+    background-color:yellow;
+    font-weight:bold; color:red;
+}
+
+.grid td.FROM {
+    background-color:red ;
+    font-weight:bold; color:white;
+}
+
+.grid td.TO {
+    background-color:green;
+    font-weight:bold; color:white;
+}
