--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ ol{overflow:hidden; overflow-y:scroll;}
 .grid td {
     cursor:pointer;
     width:50px; height:50px;
-    border:1px solid #ccc;
+    border:1px solid rgb(0, 0, 0);
     text-align:center;
     font-family:sans-serif; font-size:13px
 }
@@ -37,3 +37,16 @@ ol{overflow:hidden; overflow-y:scroll;}
     background-color:green;
     font-weight:bold; color:white;
 }
+body{
+    margin: 0px;
+    padding: 0px;
+    /* background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(images/banner.png); */
+    background-image: linear-gradient(rgba(207, 207, 207, 0.7), rgba(207, 207, 207, 0.7)), url(/banner2.png);
+    background-position:center;
+    background-size: auto;
+    position: relative;
+    text-align : center;
+    -webkit-text-stroke: .1px rgb(255, 255, 255);
+    font-weight: rgb(white);
+}
+/* nav{} */
